2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b30

	* "Extra fields" added.
		
		* Configurable from Captionator and edit caption
		  (now called "Edit text" in the pull down menu)

		* Are searchable.

		* new upload popup add_photo.php adds only one photo,
		  but lets you enter extra field data.

		* extra_fields.php, to configure extra fields for an album

		* <TITLE> of photo page can be defined via extra
		  fields, and the fields are displayed under the
		  photo and above the caption.

		* list of default extra fields added to config.php

		* changed setup: you can now have optional album
		  defaults, added a verify function to albums defaults,

	* printAlbumOptionList changed so that move_photo.php will
	  only let you move to an upgraded albums, and warns you about
	  others.

	* Removed a warning from init.php, session.php

	* Added version and constructor to AlbumItem.

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b29

	* Wrapped "up" and "top" in if-clauses to test for offline
	  mode.  This enables you to download an album and it's
	  subalbums and not the whole gallery when using wget etc.

	* Added new field to Album class: summary.  Displays on
	  page one of your album, and is editable through a popup.

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b28

	* Added commenter's name to search by prepending it to
	  comment before searching it.  Comment will now display
	  "Name: Comment text"

2003-05-14  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b27

	* Fixed another error created in -b25 in view_photo.php that broke
	  viewing of full-sized images.

2003-05-14  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b26

	* Fixed parse error in util.php created in -b25.

2003-05-14  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b25

	* Added dynamic <link> tags to support prefetching and site
	  navigation bars in browsers that support it. (Revision of Patch