@@ -1,3 +1,6 @@
+2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b31
+	*BUGFIX.  Upgrading of albums did not add extra field defaults
+
 2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b30
 
 	* "Extra fields" added.
